# riskagents

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: change-agent.md  climate-esg-risk-researcher.md  geopolitical-risk-researcher.md  macroeconomic-risk-researcher.md  market-risk-agent.md  market-structure-risk-researcher.md  regulatory-risk-researcher.md  risk-intelligence-engine.md  technology-sector-risk-researcher.md
.claude/commands/: stress-scenario-suggester.md
.claude/hooks/: context-hydration-enforcer.py  notification.py  pre_compact.py  send_event.py  session_end.py  session_start.py  stop.py  subagent_stop.py  user_prompt_submit.py
.claude/output-styles/: risk-consultant.md
docs/: 01-setup.md  02-agents.md  03-cli-implementation.md  04-cli-frontend-experience.md  05-output-styles-implementation.md  06-skills-guide.md  06a-itc-template-filler-reference.md  06c-pillar-stress-generator.md  06d-process-documenter.md  06e-stress-scenario-suggester.md  10-project-template-filler-enhancements.md  11-telegram-standalone-architecture.md  12-observability-integration.md  13-local-logging-system.md  14-proactive-regulatory-monitor.md  15-web-ui-gateway-architecture.md  Risk-Agent-Climate-Scorecard-Output-Schema.md  apache-iceberg-comprehensive-research.md  icc-business-case-skill-plan.md
docs/archive/: 06-skill-detection-implementation.md  07-itc-template-analysis.md  08-project-template-filler-skill.md  09-skill-invocation-troubleshooting.md  11-telegram-integration-analysis.md  README.md  (+2 more)
src/: __init__.py  cli_utils.py  risk_agent_cli.py
(+215 files in other folders)
