[project]
name = "riskagent"
version = "0.1.0"
description = "AI-powered Risk Management Agents - Change Agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.6",
    "rich>=13.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-pptx>=1.0.2",
]

[project.scripts]
riskagent = "src.risk_agent_cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ipython>=8.0.0",
]
